# libArchStatic

./: .env  .env_gh  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run.sh
.github/workflows/: build-linux.yml  build-macos.yml  build-msys.yaml  build-msys.yml  build-windows.yml  build.yml
scripts/: build.sh  gen_test_dirs.py  verify_unpack.py
